--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Download do Meu Jogo</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <!-- se usar .ico, troque pela linha abaixo -->
+  <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" /> -->
+
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
