--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Download do Meu Jogo</title>
   
   <!-- Favicon -->
-  <link rel="icon" href="favicon.png" type="image/png" />
+<link rel="icon" href="favicon-32x32.png" type="image/png" />
   <!-- se usar .ico, troque pela linha abaixo -->
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" /> -->
 
@@ -121,3 +121,4 @@
   </a>
 </body>
 </html>
+
