--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <header>
-    <div class="logo">MeuJogo</div>
-    <nav>
-      <a href="index.html">Início</a>
-      <a href="jogos.html">Jogos</a>
-      <a href="loja.html">Loja</a>
-      <a href="https://discord.gg/seuconvite" target="_blank">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-    </nav>
-  </header>
 
+  <header>
+  <div class="logo">
+    <a href="index.html">
+      <img src="favicon.png" alt="Logo MeuJogo" class="logo-img">
+    </a>
+  </div>
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="jogos.html">Jogos</a>
+    <a href="loja.html">Loja</a>
+    <a href="https://discord.gg/seuconvite" target="_blank">
+      <i class="fa-brands fa-discord"></i> Discord
+    </a>
+  </nav>
+</header>
+  
   <!-- Hero Section -->
   <section class="hero" id="inicio">
     <div class="hero-content">
@@ -121,4 +126,5 @@
   </a>
 </body>
 </html>
+
 
