--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
   <div class="logo">
     <a href="index.html">
-      <img src="favicon.png" alt="Logo MeuJogo" class="logo-img">
+      <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
     </a>
   </div>
   <nav>
@@ -126,5 +126,6 @@
   </a>
 </body>
 </html>
+
 
 
