--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <section class="discord" id="discord">
     <h2>💬 Junte-se ao Nosso Discord</h2>
     <p>Converse com outros jogadores, troque dicas e participe de eventos!</p>
-    <a href="https://discord.gg/SEU-LINK-AQUI" target="_blank" class="btn-discord">Entrar no Discord</a>
+    <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord">Entrar no Discord</a>
   </section>
 
   <!-- Rodapé -->
@@ -121,11 +121,12 @@
   </footer>
 
   <!-- Botão fixo Discord -->
-  <a href="https://discord.gg/seuconvite" target="_blank" class="btn-discord-fixo">
+  <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
     <i class="fa-brands fa-discord"></i>
   </a>
 </body>
 </html>
+
 
 
 
