--- a/jogos.html
+++ b/jogos.html
@@ -15,7 +15,7 @@
       <a href="index.html">Início</a>
       <a href="jogos.html">Jogos</a>
       <a href="loja.html">Loja</a>
-      <a href="https://discord.gg/seuconvite" target="_blank">
+      <a href="https://discord.gg/GZEASuXh" target="_blank">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
     </nav>
@@ -61,8 +61,9 @@
   </footer>
 
   <!-- Botão fixo Discord -->
-  <a href="https://discord.gg/seuconvite" target="_blank" class="btn-discord-fixo">
+  <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
     <i class="fa-brands fa-discord"></i>
   </a>
 </body>
 </html>
+
