--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="index.html">Início</a>
     <a href="jogos.html">Jogos</a>
     <a href="loja.html">Loja</a>
-    <a href="https://discord.gg/seuconvite" target="_blank">
+    <a href="https://discord.gg/GZEASuXh" target="_blank">
       <i class="fa-brands fa-discord"></i> Discord
     </a>
   </nav>
@@ -126,6 +126,7 @@
   </a>
 </body>
 </html>
+
 
 
 
