--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <a href="index.html">Início</a> |
       <a href="jogos.html">Jogos</a> |
       <a href="loja.html">Loja</a> |
-      <a href="https://discord.gg/seuconvite" target="_blank">Discord</a>
+      <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
     </nav>
   </footer>
 
@@ -126,6 +126,7 @@
   </a>
 </body>
 </html>
+
 
 
 
