--- a/jogos.html
+++ b/jogos.html
@@ -56,7 +56,7 @@
       <a href="index.html">Início</a> |
       <a href="jogos.html">Jogos</a> |
       <a href="loja.html">Loja</a> |
-      <a href="https://discord.gg/seuconvite" target="_blank">Discord</a>
+      <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
     </nav>
   </footer>
 
@@ -66,4 +66,5 @@
   </a>
 </body>
 </html>
+
 
