--- a/jogos.html
+++ b/jogos.html
@@ -10,10 +10,14 @@
 </head>
 <body>
   <header>
-    <div class="logo">MeuJogo</div>
+    <div class="logo">
+      <a href="index.html">
+        <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
+      </a>
+    </div>
     <nav>
       <a href="index.html">Início</a>
-      <a href="jogos.html">Jogos</a>
+      <a href="jogos.html" class="active">Jogos</a>
       <a href="loja.html">Loja</a>
       <a href="https://discord.gg/GZEASuXh" target="_blank">
         <i class="fa-brands fa-discord"></i> Discord
@@ -30,21 +34,21 @@
 
   <section class="lista-jogos">
     <div class="jogo">
-      <img src="https://i.ytimg.com/vi/7GrhJVv1q1M/sddefault.jpg" alt="Jogo 1">
-      <h3>Jogo 1</h3>
-      <p>Uma incrível jornada em mundos fantásticos.</p>
+      <img src="1000236964.jpg" alt="FNaR 1">
+      <h3>FNaR 1</h3>
+      <p>O clássico que deu início à saga do terror.</p>
       <a href="jogo1.zip" download class="btn-download">Baixar</a>
     </div>
     <div class="jogo">
-      <img src="https://i.ytimg.com/vi/7GrhJVv1q1M/sddefault.jpg" alt="Jogo 2">
-      <h3>Jogo 2</h3>
-      <p>Desafie seus limites e vença os obstáculos.</p>
+      <img src="1000236965.jpg" alt="FNaR 2">
+      <h3>FNaR 2</h3>
+      <p>Novos desafios, novos inimigos e muito mais medo.</p>
       <a href="jogo2.zip" download class="btn-download">Baixar</a>
     </div>
     <div class="jogo">
-      <img src="https://i.ytimg.com/vi/7GrhJVv1q1M/sddefault.jpg" alt="Jogo 3">
-      <h3>Jogo 3</h3>
-      <p>Entre em batalhas épicas contra inimigos poderosos.</p>
+      <img src="1000236966.jpg" alt="FNaR 3">
+      <h3>FNaR 3</h3>
+      <p>O capítulo final, onde a verdadeira ameaça aparece.</p>
       <a href="jogo3.zip" download class="btn-download">Baixar</a>
     </div>
   </section>
@@ -66,5 +70,3 @@
   </a>
 </body>
 </html>
-
-
