--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <title>Download do Meu Jogo</title>
   
   <!-- Favicon -->
-<link rel="icon" href="favicon-32x32.png" type="image/png" />
-  <!-- se usar .ico, troque pela linha abaixo -->
-  <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" /> -->
+  <link rel="icon" href="favicon-32x32.png" type="image/png" />
 
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
@@ -17,61 +15,59 @@
 <body>
 
   <header>
-  <div class="logo">
-    <a href="index.html">
-      <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
-    </a>
-  </div>
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="jogos.html">Jogos</a>
-    <a href="loja.html">Loja</a>
-    <a href="https://discord.gg/GZEASuXh" target="_blank">
-      <i class="fa-brands fa-discord"></i> Discord
-    </a>
-  </nav>
-</header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
+      </a>
+    </div>
+    <nav>
+      <a href="index.html" class="active">Início</a>
+      <a href="jogos.html">Jogos</a>
+      <a href="loja.html">Loja</a>
+      <a href="https://discord.gg/GZEASuXh" target="_blank">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
+    </nav>
+  </header>
   
   <!-- Hero Section -->
   <section class="hero" id="inicio">
     <div class="hero-content">
       <h1>Aventura Épica Espera Por Você!</h1>
       <p>Baixe agora e comece a jogar essa experiência incrível.</p>
-      <a href="meu-jogo.zip" download class="btn-download">Baixar Jogo</a>
+      <a href="jogo1.zip" download class="btn-download">Baixar Jogo</a>
     </div>
   </section>
 
-  <!-- Carrossel de Imagens -->
+  <!-- Jogos em Destaque -->
   <section class="jogos-destaque" id="jogos">
     <h2>🎮 Jogos em Destaque</h2>
     <div class="grid-jogos">
       
       <div class="card-jogo">
-        <img src="https://i.ytimg.com/vi/7GrhJVv1q1M/sddefault.jpg" alt="Jogo 1">
-        <h3>Jogo 1</h3>
-        <p>Uma incrível jornada em mundos fantásticos.</p>
+        <img src="1000236964.jpg" alt="FNaR 1">
+        <h3>FNaR 1</h3>
+        <p>O clássico que deu início à saga do terror.</p>
         <a href="jogo1.zip" download class="btn-download">Baixar</a>
       </div>
 
       <div class="card-jogo">
-        <img src="https://i.ytimg.com/vi/7GrhJVv1q1M/sddefault.jpg" alt="Jogo 2">
-        <h3>Jogo 2</h3>
-        <p>Desafie seus limites e vença os obstáculos.</p>
+        <img src="1000236965.jpg" alt="FNaR 2">
+        <h3>FNaR 2</h3>
+        <p>Novos desafios, novos inimigos e muito mais medo.</p>
         <a href="jogo2.zip" download class="btn-download">Baixar</a>
       </div>
 
       <div class="card-jogo">
-        <img src="https://i.ytimg.com/vi/7GrhJVv1q1M/sddefault.jpg" alt="Jogo 3">
-        <h3>Jogo 3</h3>
-        <p>Entre em batalhas épicas contra inimigos poderosos.</p>
+        <img src="1000236966.jpg" alt="FNaR 3">
+        <h3>FNaR 3</h3>
+        <p>O capítulo final, onde a verdadeira ameaça aparece.</p>
         <a href="jogo3.zip" download class="btn-download">Baixar</a>
       </div>
 
     </div>
   </section>
 
-
-  <!-- Seções extras -->
   <!-- Loja -->
   <section class="loja" id="loja">
     <h2>🛒 Nossa Loja</h2>
@@ -126,9 +122,3 @@
   </a>
 </body>
 </html>
-
-
-
-
-
-
