--- a/jogos.html
+++ b/jogos.html
@@ -18,7 +18,7 @@
     <nav>
       <a href="index.html">Início</a>
       <a href="jogos.html" class="active">Jogos</a>
-      <a href="loja.html">Loja</a>
+      <a href="atualizacoes.html">Atualizações</a>
       <a href="https://discord.gg/GZEASuXh" target="_blank">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
@@ -59,7 +59,7 @@
     <nav>
       <a href="index.html">Início</a> |
       <a href="jogos.html">Jogos</a> |
-      <a href="loja.html">Loja</a> |
+      <a href="atualizacoes.html">Atualizações</a> |
       <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
     </nav>
   </footer>
