--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Download do Meu Jogo</title>
+  <title>Meu Jogo - Início</title>
   
   <!-- Favicon -->
   <link rel="icon" href="favicon-32x32.png" type="image/png" />
@@ -23,7 +23,7 @@
     <nav>
       <a href="index.html" class="active">Início</a>
       <a href="jogos.html">Jogos</a>
-      <a href="loja.html">Loja</a>
+      <a href="atualizacoes.html">Atualizações</a>
       <a href="https://discord.gg/GZEASuXh" target="_blank">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
@@ -68,31 +68,28 @@
     </div>
   </section>
 
-  <!-- Loja -->
-  <section class="loja" id="loja">
-    <h2>🛒 Nossa Loja</h2>
-    <p>Confira alguns itens exclusivos para os fãs!</p>
-    <div class="grid-loja">
+  <!-- Atualizações -->
+  <section class="atualizacoes" id="atualizacoes">
+    <h2>⚡ Atualizações Recentes</h2>
+    <p>Fique por dentro das novidades e melhorias do jogo!</p>
+    <div class="grid-atualizacoes">
 
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Camiseta+MeuJogo" alt="Camiseta">
-        <h3>Camiseta Oficial</h3>
-        <p>Mostre que você faz parte da comunidade!</p>
-        <button class="btn-disabled">Em Breve</button>
+      <div class="item-atualizacao">
+        <h3>Versão 1.2</h3>
+        <p>Correção de bugs e melhorias na jogabilidade.</p>
+        <span class="data">20/08/2025</span>
       </div>
 
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Caneca+MeuJogo" alt="Caneca">
-        <h3>Caneca Gamer</h3>
-        <p>Ideal para tomar café enquanto joga.</p>
-        <button class="btn-disabled">Em Breve</button>
+      <div class="item-atualizacao">
+        <h3>Nova Fase Adicionada</h3>
+        <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
+        <span class="data">15/08/2025</span>
       </div>
 
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Chaveiro+MeuJogo" alt="Chaveiro">
-        <h3>Chaveiro Exclusivo</h3>
-        <p>Leve o MeuJogo sempre com você!</p>
-        <button class="btn-disabled">Em Breve</button>
+      <div class="item-atualizacao">
+        <h3>Evento Especial</h3>
+        <p>Participe do evento de verão com recompensas exclusivas.</p>
+        <span class="data">10/08/2025</span>
       </div>
 
     </div>
@@ -111,7 +108,7 @@
     <nav>
       <a href="index.html">Início</a> |
       <a href="jogos.html">Jogos</a> |
-      <a href="loja.html">Loja</a> |
+      <a href="atualizacoes.html">Atualizações</a> |
       <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
     </nav>
   </footer>
