--- a/index.html
+++ b/index.html
@@ -69,24 +69,27 @@
   </section>
 
   <!-- Atualizações -->
-  <section class="atualizacoes" id="atualizacoes">
+  <section class="loja" id="atualizacoes">
     <h2>⚡ Atualizações Recentes</h2>
     <p>Fique por dentro das novidades e melhorias do jogo!</p>
-    <div class="grid-atualizacoes">
+    <div class="grid-loja">
 
-      <div class="item-atualizacao">
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Versão+1.2" alt="Versão 1.2">
         <h3>Versão 1.2</h3>
         <p>Correção de bugs e melhorias na jogabilidade.</p>
         <span class="data">20/08/2025</span>
       </div>
 
-      <div class="item-atualizacao">
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Nova+Fase" alt="Nova Fase">
         <h3>Nova Fase Adicionada</h3>
         <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
         <span class="data">15/08/2025</span>
       </div>
 
-      <div class="item-atualizacao">
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Evento+Especial" alt="Evento Especial">
         <h3>Evento Especial</h3>
         <p>Participe do evento de verão com recompensas exclusivas.</p>
         <span class="data">10/08/2025</span>
