--- a/jogos.html
+++ b/jogos.html
@@ -53,7 +53,42 @@
     </div>
   </section>
 
-  <!-- Rodapé -->
+  <!-- Atualizações -->
+  <section class="loja" id="atualizacoes">
+    <h2>⚡ Atualizações Recentes</h2>
+    <p>Fique por dentro das novidades e melhorias do jogo!</p>
+    <div class="grid-loja">
+
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Versão+1.2" alt="Versão 1.2">
+        <h3>Versão 1.2</h3>
+        <p>Correção de bugs e melhorias na jogabilidade.</p>
+        <span class="data">20/08/2025</span>
+      </div>
+
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Nova+Fase" alt="Nova Fase">
+        <h3>Nova Fase Adicionada</h3>
+        <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
+        <span class="data">15/08/2025</span>
+      </div>
+
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Evento+Especial" alt="Evento Especial">
+        <h3>Evento Especial</h3>
+        <p>Participe do evento de verão com recompensas exclusivas.</p>
+        <span class="data">10/08/2025</span>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="discord">
+    <h2>💬 Junte-se ao Nosso Discord</h2>
+    <p>Converse com outros jogadores, troque dicas e participe de eventos!</p>
+    <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord">Entrar no Discord</a>
+  </section>
+
   <footer>
     <p>© 2025 MeuJogo - Todos os direitos reservados</p>
     <nav>
@@ -64,7 +99,6 @@
     </nav>
   </footer>
 
-  <!-- Botão fixo Discord -->
   <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
     <i class="fa-brands fa-discord"></i>
   </a>
