--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Atualizações - MeuJogo</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" href="favicon-32x32.png" type="image/png" />
 
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <!-- Header -->
+
   <header>
     <div class="logo">
       <a href="index.html">
@@ -28,30 +31,33 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero hero-jogos">
+  <section class="hero">
     <div class="hero-content">
-      <h1>Novidades e Atualizações</h1>
-      <p>Fique por dentro de todas as melhorias, eventos e novidades do MeuJogo!</p>
+      <h1>⚡ Atualizações Recentes</h1>
+      <p>Fique por dentro de todas as novidades e melhorias do jogo!</p>
     </div>
   </section>
 
   <!-- Atualizações -->
-  <section class="atualizacoes">
-    <div class="grid-atualizacoes">
+  <section class="loja" id="atualizacoes">
+    <div class="grid-loja">
 
-      <div class="item-atualizacao">
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Versão+1.2" alt="Versão 1.2">
         <h3>Versão 1.2</h3>
         <p>Correção de bugs e melhorias na jogabilidade.</p>
         <span class="data">20/08/2025</span>
       </div>
 
-      <div class="item-atualizacao">
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Nova+Fase" alt="Nova Fase">
         <h3>Nova Fase Adicionada</h3>
         <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
         <span class="data">15/08/2025</span>
       </div>
 
-      <div class="item-atualizacao">
+      <div class="item-loja">
+        <img src="https://via.placeholder.com/300x200?text=Evento+Especial" alt="Evento Especial">
         <h3>Evento Especial</h3>
         <p>Participe do evento de verão com recompensas exclusivas.</p>
         <span class="data">10/08/2025</span>
