--- a/jogos.html
+++ b/jogos.html
@@ -4,103 +4,76 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jogos - MeuJogo</title>
+  
+  <link rel="icon" href="favicon-32x32.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <a href="index.html">
-        <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
-      </a>
-    </div>
-    <nav>
-      <a href="index.html">Início</a>
-      <a href="jogos.html" class="active">Jogos</a>
-      <a href="atualizacoes.html">Atualizações</a>
-      <a href="https://discord.gg/GZEASuXh" target="_blank">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-    </nav>
-  </header>
 
-  <section class="hero hero-jogos">
-    <div class="hero-content">
-      <h1>Todos os Nossos Jogos</h1>
-      <p>Explore nossa coleção de aventuras épicas e escolha o seu favorito!</p>
-    </div>
-  </section>  
+<header>
+  <div class="logo">
+    <a href="index.html">
+      <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
+    </a>
+  </div>
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="jogos.html" class="active">Jogos</a>
+    <a href="atualizacoes.html">Atualizações</a>
+    <a href="https://discord.gg/GZEASuXh" target="_blank">
+      <i class="fa-brands fa-discord"></i> Discord
+    </a>
+  </nav>
+</header>
 
-  <section class="lista-jogos">
-    <div class="jogo">
-      <img src="1000236964.jpg" alt="FNaR 1">
-      <h3>FNaR 1</h3>
-      <p>O clássico que deu início à saga do terror.</p>
-      <a href="jogo1.zip" download class="btn-download">Baixar</a>
-    </div>
-    <div class="jogo">
-      <img src="1000236965.jpg" alt="FNaR 2">
-      <h3>FNaR 2</h3>
-      <p>Novos desafios, novos inimigos e muito mais medo.</p>
-      <a href="jogo2.zip" download class="btn-download">Baixar</a>
-    </div>
-    <div class="jogo">
-      <img src="1000236966.jpg" alt="FNaR 3">
-      <h3>FNaR 3</h3>
-      <p>O capítulo final, onde a verdadeira ameaça aparece.</p>
-      <a href="jogo3.zip" download class="btn-download">Baixar</a>
-    </div>
-  </section>
+<section class="hero hero-jogos">
+  <div class="hero-content">
+    <h1>Todos os Nossos Jogos</h1>
+    <p>Explore nossa coleção de aventuras épicas e escolha o seu favorito!</p>
+  </div>
+</section>  
 
-  <!-- Atualizações -->
-  <section class="loja" id="atualizacoes">
-    <h2>⚡ Atualizações Recentes</h2>
-    <p>Fique por dentro das novidades e melhorias do jogo!</p>
-    <div class="grid-loja">
+<section class="lista-jogos">
+  <div class="jogo">
+    <img src="1000236964.jpg" alt="FNaR 1">
+    <h3>FNaR 1</h3>
+    <p>O clássico que deu início à saga do terror.</p>
+    <a href="jogo1.zip" download class="btn-download">Baixar</a>
+  </div>
+  <div class="jogo">
+    <img src="1000236965.jpg" alt="FNaR 2">
+    <h3>FNaR 2</h3>
+    <p>Novos desafios, novos inimigos e muito mais medo.</p>
+    <a href="jogo2.zip" download class="btn-download">Baixar</a>
+  </div>
+  <div class="jogo">
+    <img src="1000236966.jpg" alt="FNaR 3">
+    <h3>FNaR 3</h3>
+    <p>O capítulo final, onde a verdadeira ameaça aparece.</p>
+    <a href="jogo3.zip" download class="btn-download">Baixar</a>
+  </div>
+</section>
 
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Versão+1.2" alt="Versão 1.2">
-        <h3>Versão 1.2</h3>
-        <p>Correção de bugs e melhorias na jogabilidade.</p>
-        <span class="data">20/08/2025</span>
-      </div>
+<section class="discord">
+  <h2>💬 Junte-se ao Nosso Discord</h2>
+  <p>Converse com outros jogadores, troque dicas e participe de eventos!</p>
+  <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord">Entrar no Discord</a>
+</section>
 
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Nova+Fase" alt="Nova Fase">
-        <h3>Nova Fase Adicionada</h3>
-        <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
-        <span class="data">15/08/2025</span>
-      </div>
+<footer>
+  <p>© 2025 MeuJogo - Todos os direitos reservados</p>
+  <nav>
+    <a href="index.html">Início</a> |
+    <a href="jogos.html">Jogos</a> |
+    <a href="atualizacoes.html">Atualizações</a> |
+    <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
+  </nav>
+</footer>
 
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Evento+Especial" alt="Evento Especial">
-        <h3>Evento Especial</h3>
-        <p>Participe do evento de verão com recompensas exclusivas.</p>
-        <span class="data">10/08/2025</span>
-      </div>
+<a href="#" class="btn-discord-fixo"><i class="fa-brands fa-discord"></i></a>
 
-    </div>
-  </section>
-
-  <section class="discord">
-    <h2>💬 Junte-se ao Nosso Discord</h2>
-    <p>Converse com outros jogadores, troque dicas e participe de eventos!</p>
-    <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord">Entrar no Discord</a>
-  </section>
-
-  <footer>
-    <p>© 2025 MeuJogo - Todos os direitos reservados</p>
-    <nav>
-      <a href="index.html">Início</a> |
-      <a href="jogos.html">Jogos</a> |
-      <a href="atualizacoes.html">Atualizações</a> |
-      <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
-    </nav>
-  </footer>
-
-  <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
-    <i class="fa-brands fa-discord"></i>
-  </a>
+<script src="script.js"></script>
 </body>
 </html>
