--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -5,88 +5,77 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Atualizações - MeuJogo</title>
   
-  <!-- Favicon -->
   <link rel="icon" href="favicon-32x32.png" type="image/png" />
-
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
-  <header>
-    <div class="logo">
-      <a href="index.html">
-        <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
-      </a>
+<header>
+  <div class="logo">
+    <a href="index.html">
+      <img src="favicon-32x32.png" alt="Logo MeuJogo" class="logo-img">
+    </a>
+  </div>
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="jogos.html">Jogos</a>
+    <a href="atualizacoes.html" class="active">Atualizações</a>
+    <a href="https://discord.gg/GZEASuXh" target="_blank">
+      <i class="fa-brands fa-discord"></i> Discord
+    </a>
+  </nav>
+</header>
+
+<section class="hero">
+  <div class="hero-content">
+    <h1>⚡ Atualizações Recentes</h1>
+    <p>Fique por dentro de todas as novidades e melhorias do jogo!</p>
+  </div>
+</section>
+
+<section class="loja" id="atualizacoes">
+  <div class="grid-loja">
+    <div class="item-loja">
+      <img src="https://via.placeholder.com/300x200?text=Versão+1.2" alt="Versão 1.2">
+      <h3>Versão 1.2</h3>
+      <p>Correção de bugs e melhorias na jogabilidade.</p>
+      <span class="data">20/08/2025</span>
     </div>
-    <nav>
-      <a href="index.html">Início</a>
-      <a href="jogos.html">Jogos</a>
-      <a href="atualizacoes.html" class="active">Atualizações</a>
-      <a href="https://discord.gg/GZEASuXh" target="_blank">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1>⚡ Atualizações Recentes</h1>
-      <p>Fique por dentro de todas as novidades e melhorias do jogo!</p>
+    <div class="item-loja">
+      <img src="https://via.placeholder.com/300x200?text=Nova+Fase" alt="Nova Fase">
+      <h3>Nova Fase Adicionada</h3>
+      <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
+      <span class="data">15/08/2025</span>
     </div>
-  </section>
-
-  <!-- Atualizações -->
-  <section class="loja" id="atualizacoes">
-    <div class="grid-loja">
-
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Versão+1.2" alt="Versão 1.2">
-        <h3>Versão 1.2</h3>
-        <p>Correção de bugs e melhorias na jogabilidade.</p>
-        <span class="data">20/08/2025</span>
-      </div>
-
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Nova+Fase" alt="Nova Fase">
-        <h3>Nova Fase Adicionada</h3>
-        <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
-        <span class="data">15/08/2025</span>
-      </div>
-
-      <div class="item-loja">
-        <img src="https://via.placeholder.com/300x200?text=Evento+Especial" alt="Evento Especial">
-        <h3>Evento Especial</h3>
-        <p>Participe do evento de verão com recompensas exclusivas.</p>
-        <span class="data">10/08/2025</span>
-      </div>
-
+    <div class="item-loja">
+      <img src="https://via.placeholder.com/300x200?text=Evento+Especial" alt="Evento Especial">
+      <h3>Evento Especial</h3>
+      <p>Participe do evento de verão com recompensas exclusivas.</p>
+      <span class="data">10/08/2025</span>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Discord -->
-  <section class="discord">
-    <h2>💬 Junte-se ao Nosso Discord</h2>
-    <p>Converse com outros jogadores, troque dicas e participe de eventos!</p>
-    <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord">Entrar no Discord</a>
-  </section>
+<section class="discord">
+  <h2>💬 Junte-se ao Nosso Discord</h2>
+  <p>Converse com outros jogadores, troque dicas e participe de eventos!</p>
+  <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord">Entrar no Discord</a>
+</section>
 
-  <!-- Rodapé -->
-  <footer>
-    <p>© 2025 MeuJogo - Todos os direitos reservados</p>
-    <nav>
-      <a href="index.html">Início</a> |
-      <a href="jogos.html">Jogos</a> |
-      <a href="atualizacoes.html">Atualizações</a> |
-      <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
-    </nav>
-  </footer>
+<footer>
+  <p>© 2025 MeuJogo - Todos os direitos reservados</p>
+  <nav>
+    <a href="index.html">Início</a> |
+    <a href="jogos.html">Jogos</a> |
+    <a href="atualizacoes.html">Atualizações</a> |
+    <a href="https://discord.gg/GZEASuXh" target="_blank">Discord</a>
+  </nav>
+</footer>
 
-  <!-- Botão fixo Discord -->
-  <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
-    <i class="fa-brands fa-discord"></i>
-  </a>
+<a href="#" class="btn-discord-fixo"><i class="fa-brands fa-discord"></i></a>
+
+<script src="script.js"></script>
 </body>
 </html>
