--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MeuJogo - Início</title>
+  <title>MeuJogo</title>
   
   <link rel="icon" href="favicon-32x32.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
@@ -28,7 +28,7 @@
   </nav>
 </header>
 
-<section class="hero" id="inicio">
+<section class="hero">
   <div class="hero-content">
     <h1>Aventura Épica Espera Por Você!</h1>
     <p>Baixe agora e comece a jogar essa experiência incrível.</p>
@@ -36,7 +36,7 @@
   </div>
 </section>
 
-<section class="jogos-destaque" id="jogos">
+<section class="jogos-destaque">
   <h2>🎮 Jogos em Destaque</h2>
   <div class="grid-jogos">
     <div class="card-jogo">
@@ -60,32 +60,7 @@
   </div>
 </section>
 
-<section class="loja" id="loja">
-  <h2>🛒 Nossa Loja</h2>
-  <p>Confira alguns itens exclusivos para os fãs!</p>
-  <div class="grid-loja">
-    <div class="item-loja">
-      <img src="https://via.placeholder.com/300x200?text=Camiseta+MeuJogo" alt="Camiseta">
-      <h3>Camiseta Oficial</h3>
-      <p>Mostre que você faz parte da comunidade!</p>
-      <button class="btn-disabled">Em Breve</button>
-    </div>
-    <div class="item-loja">
-      <img src="https://via.placeholder.com/300x200?text=Caneca+MeuJogo" alt="Caneca">
-      <h3>Caneca Gamer</h3>
-      <p>Ideal para tomar café enquanto joga.</p>
-      <button class="btn-disabled">Em Breve</button>
-    </div>
-    <div class="item-loja">
-      <img src="https://via.placeholder.com/300x200?text=Chaveiro+MeuJogo" alt="Chaveiro">
-      <h3>Chaveiro Exclusivo</h3>
-      <p>Leve o MeuJogo sempre com você!</p>
-      <button class="btn-disabled">Em Breve</button>
-    </div>
-  </div>
-</section>
-
-<section class="discord" id="discord">
+<section class="discord">
   <h2>💬 Junte-se ao Nosso Discord</h2>
   <p>Converse com outros jogadores, troque dicas e participe de eventos!</p>
   <a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord">Entrar no Discord</a>
@@ -101,9 +76,10 @@
   </nav>
 </footer>
 
-<a href="#" class="btn-discord-fixo"><i class="fa-brands fa-discord"></i></a>
+<a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
+  <i class="fa-brands fa-discord"></i>
+</a>
 
-<!-- JS -->
 <script src="script.js"></script>
 </body>
 </html>
