--- a/jogos.html
+++ b/jogos.html
@@ -33,7 +33,7 @@
     <h1>Todos os Nossos Jogos</h1>
     <p>Explore nossa coleção de aventuras épicas e escolha o seu favorito!</p>
   </div>
-</section>  
+</section>
 
 <section class="lista-jogos">
   <div class="jogo">
@@ -72,7 +72,9 @@
   </nav>
 </footer>
 
-<a href="#" class="btn-discord-fixo"><i class="fa-brands fa-discord"></i></a>
+<a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
+  <i class="fa-brands fa-discord"></i>
+</a>
 
 <script src="script.js"></script>
 </body>
