--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -35,21 +35,21 @@
   </div>
 </section>
 
-<section class="loja" id="atualizacoes">
-  <div class="grid-loja">
-    <div class="item-loja">
+<section class="atualizacoes">
+  <div class="grid-atualizacoes">
+    <div class="item-atualizacao">
       <img src="https://via.placeholder.com/300x200?text=Versão+1.2" alt="Versão 1.2">
       <h3>Versão 1.2</h3>
       <p>Correção de bugs e melhorias na jogabilidade.</p>
       <span class="data">20/08/2025</span>
     </div>
-    <div class="item-loja">
+    <div class="item-atualizacao">
       <img src="https://via.placeholder.com/300x200?text=Nova+Fase" alt="Nova Fase">
       <h3>Nova Fase Adicionada</h3>
       <p>Explore a nova fase "Mansão Assombrada" e desafios extras.</p>
       <span class="data">15/08/2025</span>
     </div>
-    <div class="item-loja">
+    <div class="item-atualizacao">
       <img src="https://via.placeholder.com/300x200?text=Evento+Especial" alt="Evento Especial">
       <h3>Evento Especial</h3>
       <p>Participe do evento de verão com recompensas exclusivas.</p>
@@ -74,7 +74,9 @@
   </nav>
 </footer>
 
-<a href="#" class="btn-discord-fixo"><i class="fa-brands fa-discord"></i></a>
+<a href="https://discord.gg/GZEASuXh" target="_blank" class="btn-discord-fixo">
+  <i class="fa-brands fa-discord"></i>
+</a>
 
 <script src="script.js"></script>
 </body>
